<resources>
    <string name="app_name">Let\'s Ride</string>


    <!-- Permissions -->
    <string name="enable_location_service">Enable Location Services</string>

    <!-- History -->
    <string name="history">History</string>
    <string name="track_activity">Track Activity</string>

    <string-array name="history_times">
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>All</item>
    </string-array>

    <!-- Main Activity Labels -->
    <string name="record_activity">Track Ride</string>
    <string name="max_speed">MAX SPEED</string>
    <string name="speed">SPEED</string>
    <string name="average">AVG: </string>
    <string name="elavation">ELEVATION</string>
    <string name="max">MAX:</string>
    <string name="min">MIN:</string>
    <string name="duration">DURATION</string>
    <string name="distance">DISTANCE</string>

    <string name="empty">--.--</string>
    <string name="time_zero">00:00:00</string>
    <string name="zero_zero">0.0</string>
    <string name="discard">discard</string>
    <string name="confirm_discard">Confirm Discard?</string>
    <string name="cancel">cancel</string>

    <!-- Setting Activity -->
    <string name="speed_units">Speed Units</string>
    <string name="distance_units">Distance Units</string>
    <string name="elevation_units">Elevation Units</string>
    <string name="save">Confirm Changes</string>

    <!-- Extras -->
    <string name="day_id_extra">day_id_extra</string>
    <string name="past_run_item_extra">past_run_item_extra</string>
    <string name="past_run_locations_extra">past_run_location_extras</string>

    <!-- User Preferences -->
    <string name="user_preferences">USER_PREFERENCES</string>
    <string name="user_pref_speed_unit_index">SPEED_INDEX_UNIT</string>
    <string name="user_pref_elevation_index">ELEVATION_INDEX_UNIT</string>
    <string name="user_pref_distance_index">DISTANCE_INDEX_UNIT</string>
    <string name="user_pref_min_time_loc_request">MIN_TIME_LOCATION_REQUEST</string>

    <string-array name="length_units">
        <item>ft</item>
        <item>mi</item>
        <item>m</item>
        <item>km</item>
    </string-array>
    <string-array name="length_indexes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="speed_units">
        <item>mph</item>
        <item>m/s</item>
        <item>km/h</item>
    </string-array>
    <string-array name="speed_indexes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Formatting -->
    <string name="date_format">dd-MM-yyyy</string>
    <string name="title_activity_maps">Map</string>

    <!-- Menu -->
    <string name="setttings">Settings</string>



</resources>
